# notesforexam

./: README.md
elektronik/: 00-overblik.md  02-spaendingsdeler-wheatstone-thevenin.md  04-esp32-sensorer-adc-i2c-display.md  05-sensorer-og-kalibrering.md  06-stoej-filtre-oscilloskop.md  09-mini-templates-og-cheatsheet.md  10-opgaveindeks.md
embedded/: 01-ohms-lov-effekt-modstande.md  02-spaendingsdeler-wheatstone-thevenin.md  03-batteri-stroemforsyning-pwm.md  07-rc-og-555-timer.md  08-binaer-logik.md  10-opgaveindeks.md
network/: 00-overblik.md  01-ip-subnetting.md  02-switch-arp-stp.md  03-routing-og-srx.md  04-dhcp-dns-nat.md  05-wireshark-og-fejlfinding.md  06-mqtt-ssh.md  07-esp32-og-iot.md  08-srx-security-zones.md  09-kommando-cheatsheet.md  10-opgaveindeks.md  10-vsrx-config-forklaringer.md  11-opgaveindeks.md  11-vsrx-config-eksempler.md
network/diagrammer/: README.md
network/vsrx-configs/: README.md  ass18-part1-vsrxR1-C8.json  ass18-part1-vsrxR1.json  ass18-part1-vsrxR2.json  ass18-part2-vsrxR1.json  ass18-part2-vsrxR2.json  ass32-juniper-config.json  ass42-config.json  ass54-vSRX-1-Multizone.json  ass54-vSRX-1.json  ass54-vSRX-2-Multizone.json  ass6-config.json
prog/: 00.md  01-cpp-og-gpp.md  02-cmake.md  03-shell-scripts.md  04-mqtt.md  05-catch2.md  06-logging-spdlog.md  07-hashing.md  08-encryption.md  09-debugging-og-fejl.md  10-mini-templates.md  11-googletest-ci.md  12-databaser-mariadb.md
prog/mariadb_example/: CMakeLists.txt  README.md  run_catch.sh  run_main.sh
prog/mariadb_example/src/: main.cpp
prog/mariadb_example/tests/: test_connection.cpp
prog/mqtt_example/: CMakeLists.txt  run_catch.sh  run_pub.sh  run_sub.sh
prog/mqtt_example/src/: publisher.cpp  subscriber.cpp
prog/mqtt_example/tests/: tddcatch2.cpp  test2.cpp
